--- a/index.html
+++ b/index.html
@@ -22,14 +22,45 @@
                 <h1 class="banner-subtitle"> Idea , innovation ,<br>
                     vision and challenges in<br>New Bangladesh.</h1>
                 <button class="btn-2">Explore New Bangladesh</button>
-                </div>
-                <div class="img-1">
-                    <img class="banner-img" src="assets/hero.png" alt="">
-                </div>
             </div>
+            <div class="img-1">
+                <img class="banner-img" src="assets/hero.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
-
+        <div class="target-container">
+            <h2 class="target-title">The Vision of Future</h2>
+            <p class="target-subtitle">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital <br>
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+            <div class="box-container">
+                <div class="dt-box">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Digital Transformation</h2>
+                    <p class="padding-1">Creating a nationwide digital ecosystem to enhance connectivity and access to
+                        services for all
+                        citizens.</p>
+                    <a  class=bn-1 href="">learn more</a>
+                </div>
+                <div class="gr-box">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Green Energy</h2>
+                    <p class="padding-2">Investments in solar and wind energy to ensure a sustainable and eco-friendly
+                        future.</p>
+                    <a class="bn-2" href="">learn more</a>
+                </div>
+                <div class="mi-box">
+                    <img src="assets/card-icon.png" alt="">
+                    <h2>Modern Infrastructure</h2>
+                    <p class="padding-3">Building state-of-the-art infrastructure to support economic growth and global
+                        competitiveness.
+                    </p>
+                    <a class="bn-3" href="">learn more</a>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
