added codes and new styles

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <main>
         <div class="target-container">
             <h2 class="target-title">The Vision of Future</h2>
-            <p class="target-subtitle">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting
+            <p class="target-subtitle">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge
+                technology, promoting
                 inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital <br>
                 transformation, and robust infrastructure, the country is set to become a global model of development.
             </p>
@@ -42,7 +43,7 @@
                     <p class="padding-1">Creating a nationwide digital ecosystem to enhance connectivity and access to
                         services for all
                         citizens.</p>
-                    <a  class=bn-1 href="">learn more</a>
+                    <a class=bn-1 href="">learn more</a>
                 </div>
                 <div class="gr-box">
                     <img src="assets/card-icon.png" alt="">
@@ -61,6 +62,48 @@
                 </div>
             </div>
         </div>
+        <div class="logo-2">
+            <p class="challenge-title">In 2012, Yunus became Chancellor of Glasgow Caledonian University in Scotland, a
+                position he held until
+                2018. Previously, he was a professor of economics at Chittagong University in Bangladesh.He
+                published several books related to his finance work. He is a founding board member of Grameen America
+                and Grameen Foundation, which support microcredit. Yunus also served on the board of directors of the
+                United Nations Foundation, a public charity to support UN causes, from 1998 to 2021.
+            </p>
+            <h4 class="challenge-subtitle">Dr. Muhammad Yunus</h4>
+            <p>Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>
+        <div class="news-dev-container">
+            <h1>Recent News</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+            <div class="box1">
+                <div class="box1-left">
+                    <img src="assets/satelite.png" alt="">
+                </div>
+                <div class="box1-right">
+                    <h2 class="box-title">Bangladesh Launches New Satellite</h2>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <br>
+                    <label class="date" for="date">Date:05/01/2025</label>
+                    <label class="time" for="time">Time: 10.25 PM</label>
+                    <p class="box1-text">Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>accepted as a common obligation of all people and all countries—not until then shall we,<br>with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="box1-btn">Read More</button>
+                </div>
+            </div>
+            <div class="box2">
+                <div class="box2-left">
+                    <h2 class="box-title">Bangladesh Launches New Satellite</h2>
+                    <img src="assets/al-jazeera.png" alt="">
+                    <br>
+                    <label class="date" for="date">Date:05/01/2025</label>
+                    <label class="time" for="time">Time: 10.25 PM</label>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>accepted as a common obligation of all people and all countries—not until then shall we,<br>with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="box2-btn">Read More</button>
+                </div>
+                <div class="box2-right">
+                    <img src="assets/satelite.png" alt="">
+                </div>
     </main>
     <footer>
 
