--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <br>
                     <label class="date" for="date">Date:05/01/2025</label>
                     <label class="time" for="time">Time: 10.25 PM</label>
-                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>accepted as a common obligation of all people and all countries—not until then shall we,<br>with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="box2-text">Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>accepted as a common obligation of all people and all countries—not until then shall we,<br>with a certain degree of justification, be able to speak of humankind as civilized</p>
                     <button class="box2-btn">Read More</button>
                 </div>
                 <div class="box2-right">
