--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/nav.css">
 </head>
 
 <body>
@@ -75,38 +76,75 @@
         </div>
         <div class="news-dev-container">
             <h1>Recent News</h1>
-            <p>Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+            <p>Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
             </p>
             <div class="box1">
                 <div class="box1-left">
-                    <img src="assets/satelite.png" alt="">
+                    <img class="pic-1" src="assets/satelite.png" alt="">
                 </div>
                 <div class="box1-right">
                     <h2 class="box-title">Bangladesh Launches New Satellite</h2>
-                    <img src="assets/al-jazeera.png" alt="">
+                    <img class="pic-2" src="assets/al-jazeera.png" alt="">
                     <br>
                     <label class="date" for="date">Date:05/01/2025</label>
                     <label class="time" for="time">Time: 10.25 PM</label>
-                    <p class="box1-text">Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>accepted as a common obligation of all people and all countries—not until then shall we,<br>with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="box1-text">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and <br>accepted as a common obligation of all people and all
+                        countries—not until then shall we,<br>with a certain degree of justification, be able to speak
+                        of humankind as civilized</p>
                     <button class="box1-btn">Read More</button>
                 </div>
             </div>
             <div class="box2">
                 <div class="box2-left">
                     <h2 class="box-title">Bangladesh Launches New Satellite</h2>
-                    <img src="assets/al-jazeera.png" alt="">
+                    <img class="pic-2" src="assets/al-jazeera.png" alt="">
                     <br>
                     <label class="date" for="date">Date:05/01/2025</label>
                     <label class="time" for="time">Time: 10.25 PM</label>
-                    <p class="box2-text">Not until the creation and maintenance of decent conditions of life for all people are recognized and <br>accepted as a common obligation of all people and all countries—not until then shall we,<br>with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="box2-text">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and <br>accepted as a common obligation of all people and all
+                        countries—not until then shall we,<br>with a certain degree of justification, be able to speak
+                        of humankind as civilized</p>
                     <button class="box2-btn">Read More</button>
                 </div>
                 <div class="box2-right">
-                    <img src="assets/satelite.png" alt="">
+                    <img class="pic-1" src="assets/satelite.png" alt="">
                 </div>
+            </div>
+            <div class="text">
+                <h1 class="title">Donate Today</h1>
+                <div class="sub-title">Bangladesh 2.0 aims to redefine the nation's trajectory by
+                    embracingcutting-edgetechnology,promoting inclusive growth, and ensuring sustainability. With
+                    initiatives in renewable energy,digital transformation, and robust infrastructure.</div>
+                <div class="father">
+                    <div class="yes">100 Taka</div>
+                    <div class="yes" id="yes-2">200 Taka</div>
+                    <div class="yes">500 Taka</div>
+                    <div class="yes">1000 Taka</div>
+                </div>
+                <input class="input" type="text" placeholder="Other Amount (Taka)">
+                <br>
+                <button class="button">Done Now</button>
+            </div>
+            <div class="last-part">
+                <h1 class="last-part-title">Subscribe Newsletter</h1>
+                <p class="last-part-sub-title">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing
+                    cutting-edge <br> technology, promoting inclusive growth.</p>
+                <input class="input-2" type="email" name="" id="" placeholder="Enter your email here">
+                <button class="click">Subscribe</button>
+                <p class="pera-1">We promise not to spam you!</p>
+            </div>
     </main>
     <footer>
-
+        <h1 class="footer-1">Bangladesh 2.0</h1>
+        <hr>
+        <div class="footer-2"><img src="./assets/facebook.png" alt="">
+            <img src="./assets/instagram.png" alt="">
+            <img src="./assets/x.png" alt="">
+        </div>
     </footer>
 </body>
 
